# MaxK-GNN

./: README.md  maxk_gnn_dgl.py
kernels/: CMakeLists.txt  data.h  generate_meta.py  main.cu  maxk_kernel.cu  spmm_gnna.cu  spmm_maxk.cu  spmm_maxk.h  spmm_maxk_backward.cu  spmm_maxk_backward.h
scripts_train/: flickr_maxk.sh  flickr_relu.sh  ogbn_products_maxk.sh  ogbn_products_relu.sh  ogbn_proteins_maxk.sh  ogbn_proteins_relu.sh  reddit_maxk.sh  reddit_relu.sh  yelp_maxk.sh  yelp_relu.sh
utils/: config.py  general_utils.py  models.py  proteins_loader.py
